# yazotero-mcp

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISDOC.md  README.md  cleanup_library.py  pyproject.toml  requirements.txt  run-mcp.sh
.claude/: settings.json
.claude/agents/: agentz  git-commit-agent.md  python-developer.md
.claude/commands/: feature-dev.md
.claude/hooks/: block-branch-switch.sh  format-python.sh  pr-monitor.sh  pr-watch.sh  require-worktree-agent.sh  require-worktree.sh  worktree-setup.sh  worktree-stop.sh  worktree-venv.sh
.claude/rules/: analyze-recommendations.md  concurrency.md  error-handling.md  fastmcp-serialization.md  inspect-external-packages.md  mypy-patterns.md  testing-pydantic-settings.md  worktree-pr-workflow.md
.github/workflows/: ci.yml  zotero-compat.yml
tests/: conftest.py  test_client_router.py  test_collections.py  test_create_note.py  test_doi.py  test_e2e_search.py  test_formatters.py  test_fulltext.py  test_fulltext_resolver.py  test_helpers.py  test_live_instance.py  test_remove_item.py  test_resources.py  test_response_chunker.py  test_server_startup.py  test_subcollections.py  test_tags.py  test_text_chunker.py  test_verifier.py  zotero_instance.py
tests/e2e/: conftest.py  test_collections.py  test_doi.py  test_fulltext.py  test_resources.py  test_search.py  test_subcollections.py  test_tags.py  test_update_note.py  test_update_tags.py  test_web_api.py
tests/live/: conftest.py  test_local_instance.py  zotero_instance.py
tests/unit/: conftest.py  test_client_router.py  test_crossref.py  test_external_fulltext.py  test_formatters.py  test_fulltext_resolver.py  test_fulltext_source.py  test_models.py  test_note_manager.py  test_pagination.py  test_response_chunker.py  test_server_startup.py  test_text_chunker.py  test_verifier.py  test_zotero_client.py
worktrees/main/: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISDOC.md  README.md  ROUTER_README.md  cleanup_library.py  pyproject.toml
worktrees/main/.claude/agents/: agentz  git-commit-agent.md
worktrees/main/src/: chunker.py  client_router.py  config.py  crossref_client.py  exceptions.py  formatters.py  mcp_server.py  models.py  note_manager.py  protocols.py  test.py  text_analyzer.py  zotero_client.py
worktrees/main/tests/: README.md  conftest.py  test_client_router.py  test_collections.py  test_create_note.py  test_doi.py  test_e2e_analyze.py  test_e2e_integration.py  test_e2e_notes.py  test_e2e_search.py  test_formatters.py  test_fulltext.py  test_helpers.py  test_resources.py  test_response_chunker.py  test_server_startup.py  test_subcollections.py  test_tags.py  test_text_chunker.py
yazot/: chunker.py  client_router.py  config.py  crossref_client.py  exceptions.py  formatters.py  fulltext_resolver.py  fulltext_source.py  mcp_server.py  models.py  note_manager.py  pdf_utils.py  protocols.py  verifier.py  zotero_client.py
